# mojave

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUTURE_WORK.md  LICENSE-APACHE  LICENSE-MIT  PEER.md  README.md  STREAM_A_COMPLETE.md  enter_mojave_plan  ruff.toml
crates/audit-chain/: Cargo.toml
crates/audit-chain/src/: canonical.rs  entry.rs  lib.rs  model_identity.rs  seal.rs  verify.rs
crates/audit-chain/tests/: golden_canonical.rs  property_tests.rs
crates/audit-emit/: Cargo.toml
crates/audit-emit/src/: blob_store.rs  config.rs  emitter.rs  error.rs  gate.rs  lib.rs
crates/audit-emit/tests/: blob_store_tests.rs  emitter_tests.rs  gate_tests.rs  integration_tests.rs
crates/audit-events/: Cargo.toml
crates/audit-events/src/: event_kind.rs  lib.rs  types.rs
crates/audit-events/tests/: golden_serde.rs
crates/audit-recover/: Cargo.toml
crates/audit-recover/src/: gc.rs  lib.rs  replay.rs
crates/audit-recover/tests/: gc_tests.rs  replay_tests.rs
crates/audit-sign/: Cargo.toml
crates/audit-sign/src/: attestation.rs  lib.rs  signing.rs  snapshot.rs
crates/change-attribution/: Cargo.toml
crates/change-attribution/src/: bisect.rs  blast_radius.rs  change.rs  lib.rs  mapping.rs
crates/eval-core/: Cargo.toml
crates/eval-core/src/: judge_config.rs  lib.rs  outcome.rs  trial_record.rs
crates/eval-core/tests/: trial_record_tck.rs
crates/eval-design/: Cargo.toml
crates/eval-design/src/: ability.rs  cat.rs  information.rs  item_pool.rs  lib.rs  perturbation_schedule.rs  selection.rs
crates/eval-ingest/: Cargo.toml
crates/eval-ingest/src/: id.rs  inspect.rs  inspect_types.rs  jsonl.rs  lib.rs  types.rs  validate.rs
crates/eval-ingest/tests/: inspect_tck.rs  jsonl_tck.rs
crates/eval-orchestrator/: Cargo.toml
crates/eval-orchestrator/src/: analyze.rs  config.rs  instrument.rs  lib.rs  monitor.rs  outcome_ext.rs  qmu.rs  router.rs  types.rs
crates/eval-orchestrator/tests/: batch_tck.rs  cross_check.rs  monitor_tck.rs  qmu_tests.rs
crates/irr/: Cargo.toml
crates/irr/src/: bland_altman.rs  bootstrap.rs  categorical_agreement_weights.rs  cohen.rs  dawid_skene.rs  family_stratification.rs  fleiss.rs  gwet.rs  krippendorff.rs  lib.rs  mandel.rs  msa.rs  preference_leakage.rs  types.rs
crates/irr/tests/: bland_altman_tck.rs  bootstrap_ci_wiring_tck.rs  bootstrap_tck.rs  cohen_tck.rs  dawid_skene_tck.rs  family_stratification_tck.rs  fleiss_tck.rs  gate4_bland_altman_calibration.rs  gate4_bootstrap_calibration.rs  gate4_family_stratification.rs  gate4_gwet_kappa_paradox.rs  gate4_prevalence_sweep.rs  gwet_tck.rs  krippendorff_tck.rs  mandel_tck.rs  msa_tck.rs  preference_leakage_tck.rs
crates/metric-tck-harness/: Cargo.toml
crates/metric-tck-harness/src/: lib.rs
crates/metric-tck-harness/tests/: scaffold_tck.rs
crates/mojave-cli/: Cargo.toml
crates/mojave-cli/src/: config.rs  detect.rs  error.rs  hint.rs  lib.rs  main.rs  output.rs
crates/mojave-cli/tests/: smoke.rs
crates/mojave-gsa/: Cargo.toml
crates/mojave-gsa/src/: analyze.rs  confseq.rs  diagnostics.rs  main.rs  manifest.rs
crates/perturbation-engine/: Cargo.toml
crates/perturbation-engine/src/: format.rs  lib.rs  multi_turn.rs  paraphrase.rs
crates/salib-cli/: Cargo.toml
crates/salib-cli/src/: lib.rs  main.rs
crates/salib-core/: Cargo.toml
crates/salib-core/src/: distribution.rs  lib.rs  problem.rs  reduce.rs  rng.rs
crates/salib-core/tests/: distribution_tck.rs  problem_tck.rs  rng_determinism_tck.rs  tree_fold_tck.rs
crates/salib-estimators/: Cargo.toml
crates/salib-estimators/src/: anova.rs  bootstrap.rs  bootstrap_given_data.rs  borgonovo.rs  dgsm.rs  discrepancy.rs  fast.rs  fractional_factorial.rs  g_theory.rs  given_data_sobol.rs  hdmr.rs  janon.rs  jansen.rs  lib.rs  morris.rs  owen.rs  pawn.rs  qosa.rs  rbd_fast.rs  regression.rs  saltelli2010.rs  sobol_indices.rs
crates/salib-estimators/tests/: anova_e2e.rs  anova_tck.rs  borgonovo_e2e.rs  borgonovo_tck.rs  dgsm_e2e.rs  dgsm_tck.rs  discrepancy_tck.rs  fast_e2e.rs  fast_tck.rs  fractional_factorial_tck.rs  g_theory_d_study_tck.rs  g_theory_e2e.rs  g_theory_tck.rs  given_data_sobol_e2e.rs  given_data_sobol_tck.rs  grouped_factors_tck.rs  hdmr_tck.rs  ishigami_e2e.rs  morris_e2e.rs  morris_quadratic_tck.rs  morris_tck.rs  pawn_e2e.rs  pawn_tck.rs  phase_d_efficiency_e2e.rs  phase_d_efficiency_tck.rs  qosa_e2e.rs  qosa_tck.rs  rbd_fast_e2e.rs  rbd_fast_tck.rs  regression_e2e.rs  regression_tck.rs  saltelli2010_tck.rs  second_order_tck.rs
crates/salib-samplers/: Cargo.toml  build.rs
crates/salib-samplers/data/: LICENSE.joe-kuo  new-joe-kuo-6.100
crates/salib-samplers/src/: fast.rs  iman_conover.rs  lhs.rs  lib.rs  morris.rs  owen_matrix.rs  plackett_burman.rs  saltelli_matrix.rs  sampler.rs  sobol.rs
crates/salib-samplers/tests/: fast_tck.rs  iman_conover_e2e.rs  iman_conover_tck.rs  lhs_tck.rs  saltelli_matrix_tck.rs  sobol_tck.rs
crates/salib-shapley/: Cargo.toml
crates/salib-shapley/src/: estimator.rs  lib.rs
crates/salib-shapley/tests/: shapley_ishigami_e2e.rs  shapley_tck.rs
crates/salib-surrogate/: Cargo.toml
crates/salib-surrogate/src/: active_subspace.rs  lib.rs  multi_index.rs  pce.rs  polynomial.rs  sparse_pce.rs
crates/salib-surrogate/tests/: active_subspace_e2e.rs  active_subspace_tck.rs  pce_ishigami_e2e.rs  pce_ishigami_tck.rs  sparse_pce_ishigami_e2e.rs  sparse_pce_tck.rs
crates/salib-validation/: Cargo.toml
crates/salib-validation/src/: analytic.rs  ishigami.rs  lib.rs  morris_test.rs  sobol_g.rs
crates/salib-validation/tests/: ishigami_tck.rs  sobol_g_tck.rs
crates/seq-anytime-valid/: Cargo.toml
crates/seq-anytime-valid/src/: bias.rs  error.rs  lib.rs  practical.rs  retrospective.rs  types.rs
crates/seq-anytime-valid/tests/: anytime_data_family.rs  bias_tck.rs  boosted_sprt_tck.rs  confseq_tck.rs  e_value_tck.rs  gate2_r_crosscheck.rs  gate3_properties.rs  gate4_betting_cs.rs  (+6 more)
crates/spc-charts/: Cargo.toml
python/: README.md  pyproject.toml
python/tests/: conftest.py  test_cfa.py  test_cli.py  test_factors.py  test_irt.py  test_schema.py
(+367 files in other folders)
