[workspace]
resolver = "2"
members = [
    "crates/eval-core",
    "crates/eval-ingest",
    "crates/eval-orchestrator",
    "crates/irr",
    "crates/metric-tck-harness",
    "crates/mojave-cli",
    "crates/seq-anytime-valid",
    "crates/spc-charts",
]

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antimeme-ai/mojave"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
