[project]
name = "mojave-calibrate"
version = "0.1.0"
description = "Offline calibration pipeline for mojave measurement engine"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "py-irt>=0.7",
    "deepirtools>=0.2",
    "semopy>=2.3",
    "torch>=2.0",
    "pyro-ppl>=1.8",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.scripts]
mojave-calibrate = "mojave_calibrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mojave_calibrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "scipy>=1.10",
]
