[package]
name = "audit-emit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audit event emitter with hash chain, blob store, and compile-time enforcement"

[dependencies]
audit-chain = { path = "../audit-chain" }
audit-events = { path = "../audit-events" }
audit-recover = { path = "../audit-recover" }
audit-sign = { path = "../audit-sign" }
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
