[package]
name = "eval-core"
version = "0.1.0"
edition = "2021"
description = "Foundational types for the eval measurement framework"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "trial_record_tck"
harness = false
