[package]
name = "eval-ingest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = """
Runner-agnostic eval log ingestion — reads eval runner output and
produces TrialRecord streams for the mojave measurement engine.
"""

[lib]
path = "src/lib.rs"

[dependencies]
eval-core = { path = "../eval-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
