[package]
name = "irr"
version = "0.1.0"
edition = "2021"
description = "Inter-rater reliability: classical + Dawid-Skene + preference-leakage diagnostics"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
proptest = "1"
approx = "0.5"
rand = "0.9"

[[test]]
name = "krippendorff_tck"
harness = false

[[test]]
name = "fleiss_tck"
harness = false

[[test]]
name = "cohen_tck"
harness = false
