[package]
name = "mojave-gsa"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Saltelli manifest generation and Sobol'/Borgonovo sensitivity analysis for mojave eval pipeline"

[[bin]]
name = "mojave-gsa"
path = "src/main.rs"

[dependencies]
salib-core = "0.1"
salib-samplers = "0.1"
salib-estimators = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
anyhow = "1"
hex = "0.4"
rand = { version = "0.9", default-features = false }
rand_chacha = "0.9"
seq-anytime-valid = { path = "../seq-anytime-valid" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
