[package]
name = "salib-estimators"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = """
salib-rs sensitivity analysis — estimators.
Variance-based (Sobol' Saltelli2010 / Jansen1999 / Janon2014 / Owen2013 /
Mauntz), Morris elementary effects (μ, μ*, σ), FAST / eFAST / RBD-FAST,
Borgonovo δ (PDF + CDF), PAWN (2015 + 2018), DGSM (Poincaré-bounded),
regression-based (SRC / SRRC / PCC / PRCC), given-data (Plischke 2013).
Per `plans/0002-saltelli-roadmap.md` Phases B–D.
"""

[lib]
path = "src/lib.rs"

[dependencies]
salib-core = { path = "../salib-core" }
salib-samplers = { path = "../salib-samplers" }
ndarray = "0.16"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
# Spectral decomposition for FAST/eFAST estimator (PR 9b). MIT or
# Apache-2.0 (workspace-compatible). Used only for the forward FFT
# in `fast::estimate_fast`; non-load-bearing on saltelli's
# determinism guarantees because the FFT is evaluated on a fixed
# input vector and rustfft is bit-deterministic for the same input.
rustfft = "6"
# Linear algebra for the regression-based estimators (PR 14):
# OLS via normal equations needs (X^T X)^-1 for SRC/PCC. statrs
# already pulls nalgebra into the graph; we declare it explicitly
# rather than rely on the transitive availability.
nalgebra = "0.33"
statrs = "0.18"
thiserror = "2"
salib-surrogate = { path = "../salib-surrogate" }

[dev-dependencies]
# End-to-end estimator tests use the analytic test functions from
# salib-validation (Ishigami at canonical (a=7, b=0.1)).
salib-validation = { path = "../salib-validation" }
# Outer Gherkin TCK harness.
metric-tck-harness = { path = "../metric-tck-harness" }

[lints]
workspace = true
