[package]
name = "salib-samplers"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = """
salib-rs sensitivity analysis — sampling designs.
LHS, Sobol' QMC, Halton, the Saltelli (A, B, A_Bⁱ) construction,
Morris trajectories (classic + Campolongo), FAST / eFAST / RBD-FAST.
Per `plans/0002-saltelli-roadmap.md` Phase B.
"""

[lib]
path = "src/lib.rs"

[dependencies]
salib-core = { path = "../salib-core" }

# Sample matrices live in `ndarray::Array2<f64>` row-major. Per
# `decisions/2026-04-28-saltelli-lhs-sampler.md` § "ndarray
# introduction" — sky-claude's spec § 3.2 + § 8 fix this as the
# canonical math storage; salib-samplers is the inflection point
# where it enters the dep graph.
ndarray = "0.16"

# Underlying RNG for permutations and offsets; routed through
# `RngState::into_chacha`.
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }

# `Sampler::config_hash` — SHA-256 over canonical JSON of the
# sampler config. Same posture as `Problem::content_hash`
# (per `decisions/2026-04-28-saltelli-problem-shape.md`).
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `SaltelliError` — fallible `build_saltelli_matrix`.
thiserror = "2"

[dev-dependencies]
# Outer Gherkin TCK harness.
metric-tck-harness = { path = "../metric-tck-harness" }
# PR 19b Iman-Conover e2e drives correlated-input Sobol' demonstrations
# through `salib-estimators::estimate_given_data_sobol`.
salib-estimators = { path = "../salib-estimators" }

[lints]
workspace = true
