[package]
name = "salib-shapley"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = """
salib-rs sensitivity analysis — Shapley effects.
Estimator from Song-Nelson-Staum 2016 Algorithm 1: random-permutation
sampling + double-loop Monte Carlo for the conditional-variance cost
function. Per `plans/0003-saltelli-phase-d.md` PR 17.
"""

[lib]
path = "src/lib.rs"

[dependencies]
salib-core = { path = "../salib-core" }
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
thiserror = "2"

[dev-dependencies]
salib-validation = { path = "../salib-validation" }
metric-tck-harness = { path = "../metric-tck-harness" }

[lints]
workspace = true
