[package]
name = "salib-surrogate"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = """
salib-rs sensitivity analysis — surrogate models.
Polynomial Chaos Expansion (PCE) with sparse LARS coefficient
selection (Blatman-Sudret 2011) + analytic Sobol' indices from
PCE coefficients (Sudret 2008). Active subspace dimension reduction
(Constantine 2014). Per `plans/0003-saltelli-phase-d.md` PRs 16, 18.
"""

[lib]
path = "src/lib.rs"

[dependencies]
salib-core = { path = "../salib-core" }
# `nalgebra` for OLS via Cholesky in `pce::fit_full_pce`. Already
# in the workspace dep graph transitively via statrs.
nalgebra = "0.33"
# `ndarray` for `(N, d)` sample matrix shape.
ndarray = "0.16"
thiserror = "2"

[dev-dependencies]
# For end-to-end Ishigami contract close at PR 16b: Sobol' QMC base
# samples + canonical Ishigami fixture + Gherkin step harness.
# PR 18 active-subspace e2e adds salib-estimators for the
# `finite_difference_gradients` helper.
salib-estimators = { path = "../salib-estimators" }
salib-samplers = { path = "../salib-samplers" }
salib-validation = { path = "../salib-validation" }
metric-tck-harness = { path = "../metric-tck-harness" }

[lints]
workspace = true
