[package]
name = "seq-anytime-valid"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sequential hypothesis testing and anytime-valid inference primitives"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
proptest = "1"
approx = "0.5"
metric-tck-harness = { path = "../metric-tck-harness" }
serde_json = "1"
